--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -10,5 +10,13 @@ services:
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
 
+  redis:
+    image: redis
+    ports:
+      - 6378:6379
+    volumes:
+      - redis_data:/data
+
 volumes:
   mongo_data:
+  redis_data:
